{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 45,
  "lineage": "e7946e33-9661-83e0-d294-457bff3c516f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkInterfaces/hr-dev-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "5hsjdwz4iyeuzihkguahhnviae.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.1.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
              }
            ],
            "location": "eastus",
            "name": "hr-dev-bastion-host-linuxvm-nic",
            "private_ip_address": "10.1.100.4",
            "private_ip_addresses": [
              "10.1.100.4"
            ],
            "resource_group_name": "hr-dev-rg-hvfxco"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "internal_domain_name_suffix": "5hsjdwz4iyeuzihkguahhnviae.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/publicIPAddresses/hr-dev-linuxvm-publicip",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
              }
            ],
            "location": "eastus",
            "name": "hr-dev-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hr-dev-rg-hvfxco"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic|/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-appsubnet-nsg",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-8080",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-1433",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3306",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-5432",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "location": "eastus",
            "name": "hr-dev-web-linuxvm-nic-nsg",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.78.100",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-bastion-host-publicip",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_service_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-service-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.78.131",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-bastion-service-publicip",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/publicIPAddresses/hr-dev-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.78.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-linuxvm-publicip",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "name": "hr-dev-vnet-appsubnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.101.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "name": "hr-dev-vnet-bastionsubnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "name": "hr-dev-vnet-dbsubnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "db91e4f9-463e-4c09-a0ea-350073b6a804",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "eastus",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-hvfxco",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
                "name": "hr-dev-vnet-websubnet",
                "security_group": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg"
              },
              {
                "address_prefix": "10.1.100.0/24",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
                "name": "hr-dev-vnet-bastionsubnet",
                "security_group": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg"
              },
              {
                "address_prefix": "10.1.101.0/27",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.1.11.0/24",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
                "name": "hr-dev-vnet-appsubnet",
                "security_group": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg"
              },
              {
                "address_prefix": "10.1.21.0/24",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
                "name": "hr-dev-vnet-dbsubnet",
                "security_group": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-hvfxco/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}